Modified CMakeLists.txt to be able to create out of source builds. Added kdevelop specific files to .gitignore.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,41 +6,41 @@ include_directories(include)
 SET(CMAKE_CXX_FLAGS "-O0 -g")
 
 SET(main_SRC
-	driver/main.cpp
-        driver/ocl_wrapper.cpp
-	tmp/test_wrap_main.cpp
+	${openclopenbenchmark_SOURCE_DIR}/driver/main.cpp
+        ${openclopenbenchmark_SOURCE_DIR}/driver/ocl_wrapper.cpp
+	${openclopenbenchmark_BINARY_DIR}/tmp/test_wrap_main.cpp
 )
 
 file(GLOB test_SRC
-	tests/memory/*.ocl
-	tests/arithmetic/*.ocl
-	tests/control/*.ocl
-        tests/image/*.ocl
+	${openclopenbenchmark_SOURCE_DIR}/tests/memory/*.ocl
+	${openclopenbenchmark_SOURCE_DIR}/tests/arithmetic/*.ocl
+	${openclopenbenchmark_SOURCE_DIR}/tests/control/*.ocl
+        ${openclopenbenchmark_SOURCE_DIR}/tests/image/*.ocl
 )
 
 EXECUTE_PROCESS(
-	COMMAND mkdir -p tmp
+	COMMAND mkdir -p ${openclopenbenchmark_BINARY_DIR}/tmp
 )
 
 foreach(socl ${test_SRC})
 EXECUTE_PROCESS(
-	COMMAND utils/get_name ${socl}
+	COMMAND ${openclopenbenchmark_SOURCE_DIR}/utils/get_name ${socl}
 	OUTPUT_VARIABLE name
 )
 ADD_CUSTOM_COMMAND(
-	OUTPUT "tmp/${name}_wrap.cpp"
-	COMMAND utils/splitter ${socl} tmp/
-	DEPENDS ${socl} utils/splitter
+	OUTPUT "${openclopenbenchmark_BINARY_DIR}/tmp/${name}_wrap.cpp"
+	COMMAND ${openclopenbenchmark_SOURCE_DIR}/utils/splitter ${socl} ${openclopenbenchmark_BINARY_DIR}/tmp/
+	DEPENDS ${socl} ${openclopenbenchmark_SOURCE_DIR}/utils/splitter
 )
 SET(main_SRC
     ${main_SRC}
-    "tmp/${name}_wrap.cpp"
+    "${openclopenbenchmark_BINARY_DIR}/tmp/${name}_wrap.cpp"
 )
 endforeach(socl)
 
 ADD_CUSTOM_COMMAND(
-	OUTPUT tmp/test_wrap_main.cpp
-	COMMAND utils/wrap_main_gen ${test_SRC} > tmp/test_wrap_main.cpp
+	OUTPUT ${openclopenbenchmark_BINARY_DIR}/tmp/test_wrap_main.cpp
+	COMMAND ${openclopenbenchmark_SOURCE_DIR}/utils/wrap_main_gen ${test_SRC} > ${openclopenbenchmark_BINARY_DIR}/tmp/test_wrap_main.cpp
 	DEPENDS ${test_SRC} utils/wrap_main_gen
 )
 
